@@ -1,3 +1,8 @@
+2005-12-09  Derek Price  <derek@ximbiot.com>
+
+	* sanity.sh: Monor corrections for nobase testing.
+	(modes): Unset CVSUMASK when done.
+
 2005-12-08  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am (maintainercheck-local, nobaseremotecheck,
